Fixing a 3rd party bug in code

--- a/Geneyx_JS/geneyxTest.html
+++ b/Geneyx_JS/geneyxTest.html
@@ -33,14 +33,14 @@
     <script src="js/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/SVGLoader.js"></script>
-    <script src="js/topAnimationMobile.js"></script>
+    <script src="js/geneyxTest.js"></script>
     <!-- <script src="js/ourCustomersAnim.js"></script> -->
 </head>
 
 <body>
-    <!-- <div id="world"></div> -->
+    <div id="world"></div>
     <!-- <div id="ourCustomersMobile"></div> -->
-    <div id="topAnimationMobile"></div>
+    <!-- <div id="topAnimationMobile"></div> -->
 </body>
 
 </html>
